--- a/site/styles/main.less
+++ b/site/styles/main.less
@@ -7,14 +7,14 @@
  */
 
 @color_title: #33485d;
-@color_header_text: white;
+@color_header_text: #33485d;
 @color_features_text: #7e8b8c;
 
 @color_element_text: #333333;
 @color_element: white;
 
 @color_button_text: white;
-@color_button: #287fb8;
+@color_button: #75cb1d;
 
 @color_selection_text: white;
 @color_selection: #f29b11;
