--- a/site/styles/header.less
+++ b/site/styles/header.less
@@ -34,6 +34,7 @@ header {
 	background-image: url(../images/header-backgroun-07.jpg);
 	background-repeat: no-repeat;
 	background-position: center top;
+	min-height:800px;
 	overflow: hidden;
 }
 
