--- a/site/templates/home.xml
+++ b/site/templates/home.xml
@@ -17,9 +17,9 @@
 					<div class="features_container">
 						<cms:module
 							name="articles"
-							action="show_list"
-							group="features"
-							template="parts/feature.xml"
+							action="show_group"
+							text_id="features"
+							template="parts/article_group_title.xml"
 							/>
 					</div>
 				</div>
