--- a/site/styles/content.less
+++ b/site/styles/content.less
@@ -110,7 +110,8 @@ div#results div.result figure {
 }
 
 div#results div.result figure img {
-	box-shadow: 0px 0px 0px 1px fade(@color_title, 10%);
+	box-shadow:none;
+
 }
 
 div#results div.result div.summary {
