--- a/site/styles/main_mobile.less
+++ b/site/styles/main_mobile.less
@@ -24,6 +24,7 @@
 
 @color_text: white;
 @color_background: #ebeff0;
+@color_copyright:#000000;
 
 @color_details_text: #333333;
 @color_details: white;
