--- a/site/styles/header_mobile.less
+++ b/site/styles/header_mobile.less
@@ -287,14 +287,16 @@ header form label svg {
 	width: 1.5em;
 	height: 1.5em;
 
-	padding: 8px;
+	padding-top: 8px;
+	padding-bottom: 8px;
+	padding-right: 5px;
 	fill: lighten(@color_element_text, 40%);
 }
 
 header form label a.gps {
 	display: inline-block;
-	padding-top: 1em;
-	padding-bottom: 1em;
+	padding-top: 0.8em;
+	padding-bottom: 0.8em;
 }
 
 header form label a.gps svg {
@@ -313,15 +315,14 @@ header form label a.gps.locked svg {
 header form label input {
 	width: 55vw;
 	vertical-align: top;
-	padding-top: 2.6em;
-	padding-bottom: 2.6em;
+	line-height: 4em;
 	padding-left: 5px;
 
 	border: 0px;
 	background-color: transparent;
 
 	color: @color_element_text;
-	font-size: 0.7em;
+	font-size: 1em;
 }
 
 header form input::-moz-focus-inner,
@@ -338,7 +339,7 @@ header form div.controls {
 header form div.controls button {
 	display: inline-block;
 	vertical-align: middle;
-	padding: 1.5em 1em;
+	padding: 1.3em 1em;
 
 	border: 0px;
 	border-radius: 0px @control_border_radius @control_border_radius 0px;
