--- a/site/styles/header_mobile.less
+++ b/site/styles/header_mobile.less
@@ -270,9 +270,11 @@ header.home form div.vehicle_type input[value=truck]:checked + span:after {
 header form > label {
 	display: inline-block;
 	vertical-align: middle;
+	border-top: 1px solid @color_title;
+	border-bottom: 1px solid @color_title;
+	border-left: 1px solid @color_title;	
 	border-radius: @control_border_radius 0px 0px @control_border_radius;
 	background-color: @color_element;
-	box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.3);
 	white-space: nowrap;
 }
 
@@ -343,9 +345,11 @@ header form div.controls button {
 	padding: 1.3em 1em;
 
 	border: 0px;
+	border-top: 1px solid @color_title;
+	border-bottom: 1px solid @color_title;
+	border-right: 1px solid @color_title;	
 	border-radius: 0px @control_border_radius @control_border_radius 0px;
 	background-color: #75cb1d;
-	box-shadow: 2px 2px 10px rgba(0, 0, 0, 0.3);
 
 	color: @color_button_text;
 	line-height: 0px;
