--- a/site/styles/main_mobile.less
+++ b/site/styles/main_mobile.less
@@ -19,11 +19,11 @@
 @color_selection_text: white;
 @color_selection: #f29b11;
 
-@color_footer_text: #BAC7D4;
+@color_footer_text: #33485d;
 @color_footer: #2b3d4f;
 
 @color_text: white;
-@color_background: #ebeff0;
+@color_background: #bcc2c6;
 @color_copyright:#000000;
 
 @color_details_text: #333333;
